--- a/mystyle.css
+++ b/mystyle.css
@@ -9,4 +9,14 @@ body{
 
 a{
     text-decoration: none;
+    color: white;
+}
+
+/*Utilities*/
+header{
+    background-image: url(./img/header.jpg);
+    height: 300px;
+    background-size: cover;
+    color: white;
+    text-align: center;
 }
