--- a/mystyle.css
+++ b/mystyle.css
@@ -12,11 +12,22 @@ a{
     color: white;
 }
 
-/*Utilities*/
-header{
+/*Header*/
+
+.main-header{
     background-image: url(./img/header.jpg);
     height: 300px;
     background-size: cover;
     color: white;
     text-align: center;
+}
+.navigation-bar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100px;
+    align-items: center;
+}
+.menu a{
+    margin-right: 10px;
 }
