--- a/mystyle.css
+++ b/mystyle.css
@@ -1,13 +1,21 @@
 /*Global*/
-*{
+* {
     margin: 0;
 }
-
-body{
-    font-family: arial;
+html,body {
+    height: 100%;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    font-family: "Libertinus Serif", serif;
 }
 
-a{
+main {
+    flex: 1;
+}
+
+a {
     text-decoration: none;
     color: white;
 }
@@ -26,14 +34,14 @@ img {
 }
 /*Header*/
 
-.main-header{
+.main-header {
     background-image: url(./img/header.jpg);
     height: 300px;
     background-size: cover;
     color: white;
     text-align: center;
 }
-.navigation-bar{
+.navigation-bar {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -41,7 +49,7 @@ img {
     align-items: center;
 }
 
-.menu a{
+.menu a {
     margin-right: 20px;
 }
 
@@ -69,7 +77,7 @@ img {
     border: 1px solid gray;
 }
 
-.btn-details{
+.btn-details {
     display: block;
     background-color: rgba(249, 129, 0, 0.773);
     text-align: center;
@@ -88,19 +96,118 @@ img {
     gap: 20px;
 }
 
-.list-items{
+.list-items {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 20px;
 }
 
-.list-items div{
+.list-items div {
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
 }
 
 .price-color {
     color: rgb(99, 161, 6);
+}
+
+/*Contact*/
+
+.contact-header {
+    background-color: orange;
+    height: 200px;
+    background-size: cover;
+    color: black;
+    text-align: center;
+}
+.contact-header a {
+    color: black;
+}
+
+.contact-text {
+    text-align: center;
+}
+
+.instructions {
+    font-weight: 700;
+}
+
+.instructions-details {
+    font-weight: 300;
+}
+
+.form {
+    background-color: #dedede;
+    padding: 20px;
+    border-radius: 10px;
+}
+legend {
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 10px;
+}
+.input-control {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+}
+.input-control label {
+    width: 20%;    
+}
+.input-control input, .input-control textarea, .input-control select{
+    width: 80%;
+    padding: 5px;
+    border: none;
+    border-radius: 5px
+}
+
+.contact-form{
+    margin-top: 20px;
+    margin-bottom: 10%;
+}
+
+.contact-end{
+    margin-top: 75px;
+    margin-bottom: 75px;
+}
+
+
+/*footer*/
+
+footer {
+    background-color: #dedede;
+    height: 150px;
+}
+
+.footer-text {
+    display: flex;
+    height: 120px;
+    justify-content: space-between;
+    align-items: center;
+}
+.text-bold {
+    font-weight: 700;
+    text-decoration: underline;
+}
+.policy-info {
+    display: flex;
+}
+.cr-text {
+    border-right: 2px solid black;
+    padding: 10px;
+    margin-right: 10px;
+}
+.sm-container{
+    display: flex;
+}
+.sm-icon{
+    display: flex;
+    justify-content: center;
+    border: 1px solid black;
+    width: 20px;
+    border-radius: 50%;
+    padding: 5px;
+    margin-right: 10px;
 }
